# doc-qa

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  app.py  langfuse_client.py  pyproject.toml  rag.py
backend/tests/: test_integration.py
docs/: adr-001-vector-db.md
