[project]
name = "rag-demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "streamlit>=1.35.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.2",
    "fastembed>=0.4.0",
    "pypdf>=4.0.0",
    "langfuse>=4.0.0",
    "python-dotenv>=1.0.0",
    "groq>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
