[project]
name = "rag-demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "streamlit>=1.35.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.2",
    "fastembed>=0.4.0",
    "pypdf>=4.0.0",
    "pypdfium2>=4.0.0",
    "ndlocr-lite @ git+https://github.com/ndl-lab/ndlocr-lite",
    "langfuse>=4.0.0",
    "python-dotenv>=1.0.0",
    "groq>=0.9.0",
    "google-genai>=2.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.12",
]
